--- a/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_7.ipynb
+++ b/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_7.ipynb
@@ -29,18 +29,76 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "# Step 1: Simulate a dataset with noisy customer reviews\n",
+    "def generate_noisy_reviews():\n",
+    "    return pd.DataFrame({\n",
+    "        \"Customer_Review\": [\n",
+    "            \"Amaaaazing!!! ***** Great pr0duct :)\",\n",
+    "            \"Worst@@@ experience ever!!! D0n't buy###\",\n",
+    "            \"L0ved it...!! will def@initely buy again.\",\n",
+    "            \"Terrrrible serv1ce!!!! W0uldn't rec0mmend..\",\n",
+    "            \"S0-so product, quite av#erage. meh\",\n",
+    "            \"9999Stars*****!!!, absolutely w0rth it :)\",\n",
+    "            \"BAD!!! SH1TTY pr0duct... waste of $$$\",\n",
+    "            \"best.best.best.!!! <3 loved itttt!\",\n",
+    "            \"No issues... but n0t perfect ;)\",\n",
+    "            \"Co0l 123 product#@! very gooodddd...\"\n",
+    "        ]\n",
+    "    })\n",
+    "\n",
+    "# Step 2: Clean noisy text using regex and basic NLP preprocessing\n",
+    "def clean_text(text):\n",
+    "    try:\n",
+    "        text = text.lower()  # Normalize case\n",
+    "        text = re.sub(r\"http\\S+|www\\S+|https\\S+\", \"\", text)  # Remove URLs\n",
+    "        text = re.sub(r\"[^a-z\\s]\", \"\", text)  # Remove non-alphabetic characters\n",
+    "        text = re.sub(r\"\\s+\", \" \", text).strip()  # Normalize whitespace\n",
+    "        return text\n",
+    "    except Exception as e:\n",
+    "        raise ValueError(f\"Text cleaning failed: {e}\")\n",
+    "\n",
+    "# Step 3: Apply cleaning to the entire dataset\n",
+    "def apply_text_cleaning(df):\n",
+    "    try:\n",
+    "        df['Cleaned_Review'] = df['Customer_Review'].apply(clean_text)\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        raise ValueError(f\"Failed to clean dataset: {e}\")\n",
+    "\n",
+    "# Step 4: Display comparison\n",
+    "def compare_reviews(df):\n",
+    "    print(\"\\n--- Noisy vs Cleaned Reviews ---\")\n",
+    "    for original, cleaned in zip(df['Customer_Review'], df['Cleaned_Review']):\n",
+    "        print(f\"\\nOriginal: {original}\\nCleaned : {cleaned}\")\n",
+    "\n",
+    "# Main workflow\n",
+    "def main():\n",
+    "    print(\"Generating noisy customer reviews...\")\n",
+    "    df = generate_noisy_reviews()\n",
+    "\n",
+    "    print(\"Cleaning text data...\")\n",
+    "    df_cleaned = apply_text_cleaning(df)\n",
+    "\n",
+    "    compare_reviews(df_cleaned)\n",
+    "\n",
+    "# Run script\n",
+    "main()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.12.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
