--- a/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_7.ipynb
+++ b/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_7.ipynb
@@ -26,9 +26,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating noisy customer reviews...\n",
+      "Cleaning text data...\n",
+      "\n",
+      "--- Noisy vs Cleaned Reviews ---\n",
+      "\n",
+      "Original: Amaaaazing!!! ***** Great pr0duct :)\n",
+      "Cleaned : amaaaazing great prduct\n",
+      "\n",
+      "Original: Worst@@@ experience ever!!! D0n't buy###\n",
+      "Cleaned : worst experience ever dnt buy\n",
+      "\n",
+      "Original: L0ved it...!! will def@initely buy again.\n",
+      "Cleaned : lved it will definitely buy again\n",
+      "\n",
+      "Original: Terrrrible serv1ce!!!! W0uldn't rec0mmend..\n",
+      "Cleaned : terrrrible servce wuldnt recmmend\n",
+      "\n",
+      "Original: S0-so product, quite av#erage. meh\n",
+      "Cleaned : sso product quite average meh\n",
+      "\n",
+      "Original: 9999Stars*****!!!, absolutely w0rth it :)\n",
+      "Cleaned : stars absolutely wrth it\n",
+      "\n",
+      "Original: BAD!!! SH1TTY pr0duct... waste of $$$\n",
+      "Cleaned : bad shtty prduct waste of\n",
+      "\n",
+      "Original: best.best.best.!!! <3 loved itttt!\n",
+      "Cleaned : bestbestbest loved itttt\n",
+      "\n",
+      "Original: No issues... but n0t perfect ;)\n",
+      "Cleaned : no issues but nt perfect\n",
+      "\n",
+      "Original: Co0l 123 product#@! very gooodddd...\n",
+      "Cleaned : col product very gooodddd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import re\n",
@@ -97,7 +138,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.12"
   }
  },
