--- a/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_8.ipynb
+++ b/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_8.ipynb
@@ -25,17 +25,110 @@
    "source": [
     "# write your code from here\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'nltk'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Step 1: Import necessary libraries\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnltk\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Import necessary libraries\n",
+    "import nltk\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from collections import Counter\n",
+    "import string\n",
+    "\n",
+    "# Step 2: Download NLTK resources\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "# Sample product descriptions dataset (you can replace this with your own CSV or dataset)\n",
+    "data = {\n",
+    "    'product_id': [1, 2, 3],\n",
+    "    'description': [\n",
+    "        \"This is a high-quality wooden table perfect for dining rooms.\",\n",
+    "        \"A stylish and modern chair designed for comfort and elegance.\",\n",
+    "        \"Durable stainless steel water bottle with vacuum insulation.\"\n",
+    "    ]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Step 3: Define stopwords and preprocessing function\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    tokens = word_tokenize(text.lower())  # lowercase and tokenize\n",
+    "    words = [word for word in tokens if word.isalpha()]  # remove punctuation\n",
+    "    return words\n",
+    "\n",
+    "def remove_stopwords(words):\n",
+    "    return [word for word in words if word not in stop_words]\n",
+    "\n",
+    "# Step 4: Analyze word frequencies before and after stopword removal\n",
+    "all_words_before = []\n",
+    "all_words_after = []\n",
+    "\n",
+    "for desc in df['description']:\n",
+    "    words = preprocess_text(desc)\n",
+    "    all_words_before.extend(words)\n",
+    "    filtered_words = remove_stopwords(words)\n",
+    "    all_words_after.extend(filtered_words)\n",
+    "\n",
+    "# Step 5: Create frequency counters\n",
+    "freq_before = Counter(all_words_before)\n",
+    "freq_after = Counter(all_words_after)\n",
+    "\n",
+    "# Step 6: Plotting top 10 most common words\n",
+    "def plot_frequencies(counter, title):\n",
+    "    most_common = counter.most_common(10)\n",
+    "    words, counts = zip(*most_common)\n",
+    "    plt.figure(figsize=(10, 4))\n",
+    "    plt.bar(words, counts, color='skyblue')\n",
+    "    plt.title(title)\n",
+    "    plt.xlabel('Words')\n",
+    "    plt.ylabel('Frequency')\n",
+    "    plt.xticks(rotation=45)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "# Step 7: Show frequency comparison\n",
+    "plot_frequencies(freq_before, 'Word Frequency Before Stopword Removal')\n",
+    "plot_frequencies(freq_after, 'Word Frequency After Stopword Removal')\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
