--- a/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_9.ipynb
+++ b/src/Module 11/AI-Driven Data Quality & Anomaly Detection/Ques_9.ipynb
@@ -23,17 +23,75 @@
    "source": [
     "# write your code from here\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'textblob'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Step 1: Import Libraries\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtextblob\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TextBlob\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Sample DataSet with Spelling Errors (You can replace this with a CSV or actual dataset)\u001b[39;00m\n\u001b[1;32m      6\u001b[0m data \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mreview_id\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m],\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mreview\u001b[39m\u001b[38;5;124m'\u001b[39m: [\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     12\u001b[0m     ]\n\u001b[1;32m     13\u001b[0m }\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'textblob'"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Import Libraries\n",
+    "import pandas as pd\n",
+    "from textblob import TextBlob\n",
+    "\n",
+    "# Sample DataSet with Spelling Errors (You can replace this with a CSV or actual dataset)\n",
+    "data = {\n",
+    "    'review_id': [1, 2, 3],\n",
+    "    'review': [\n",
+    "        \"This prodcut is amazng and usefull.\",\n",
+    "        \"Excellnt qulaity but slow dellivery.\",\n",
+    "        \"Horrble servce, will not recomend.\"\n",
+    "    ]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Step 2: Define Spelling Correction Function using TextBlob\n",
+    "def correct_spelling(text):\n",
+    "    try:\n",
+    "        corrected = str(TextBlob(text).correct())\n",
+    "        return corrected\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error correcting text: {e}\")\n",
+    "        return text\n",
+    "\n",
+    "# Step 3: Apply Corrections\n",
+    "df['corrected_review'] = df['review'].apply(correct_spelling)\n",
+    "\n",
+    "# Step 4: Display Original vs Corrected\n",
+    "print(\"Original vs Corrected Reviews:\\n\")\n",
+    "print(df[['review_id', 'review', 'corrected_review']])\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
