--- a/src/Module 11/Hands-on - AI-Based Data Quality & Real-Time Monitoring/Ques_1.ipynb
+++ b/src/Module 11/Hands-on - AI-Based Data Quality & Real-Time Monitoring/Ques_1.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
     "\n",
     "# Step 2: Display anomaly counts\n",
     "anomaly_counts = df['anomaly'].value_counts()\n",
-    "print(\"Anomaly Counts:\\n\", anomaly_counts)\n"
+    "print(\"anomaly Counts:\\n\", anomaly_counts)\n"
    ]
   },
   {
